Represent core protocol values as immutable records